Thu Jul 29 16:24:39 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAO.mwc:

          removed comment that was only for TAO 1.4a.

        * NEWS:

          minor fixes

Wed Jul 28 21:09:22 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/debug.cpp:

          Removed incorrect comments

        * java/idl2jni/codegen/idl2jni_codegen.mpc:

          Added the verbatim(gnuace) section for setting the
          TAO_IDL_PREPROCESSOR macro and also making the idl_stubs target
          depend on this project.  (from dds/idl/opendds_idl.mpc)

        * java/idl2jni/runtime/idl2jni_runtime.h:
        * java/idl2jni/runtime/idl2jni_runtime.cpp:

          Removed preprocessor macros that were previously used for TAO 1.4a
          compatibility but currently only have one possible definition.

Wed Jul 28 20:49:46 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Added notes for ownership, group presentation qos and etc.

Wed Jul 28 20:20:44 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderRemoteImpl.h:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterRemoteImpl.h:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/EntityImpl.h:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/LocalObject.h:
        * dds/DCPS/Marked_Default_Qos.h:
        * dds/DCPS/OwnershipManager.h:
        * dds/DCPS/PublicationInstance.h:
        * dds/DCPS/RcHandle_T.h:
        * dds/DCPS/RcObject_T.h:
        * dds/DCPS/ReceivedDataElementList.h:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriptionInstance.h:
        * dds/DCPS/TopicDescriptionImpl.h:
        * dds/DCPS/TopicImpl.h:
        * dds/DCPS/Transient_Kludge.h:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/debug.h:
        * dds/DCPS/transport/framework/TransportDebug.h:
        * dds/DdsDcps.idl: