@@ -1,3 +1,9 @@
+Fri Jul 30 13:23:02 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * tools/scripts/set_svnignore.pl:
+
+          New script for setting svn:ignore properties.
+
 Thu Jul 29 16:24:39 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * DDS_TAO.mwc:
